frontend add pwa setting (#14)

--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -23,7 +23,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/login",
   "display": "standalone",
   "theme_color": "#FFCB23",
   "background_color": "#ffffff",
