--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -26,12 +26,5 @@
   "start_url": "/login",
   "display": "standalone",
   "theme_color": "#FFCB23",
-  "background_color": "#ffffff",
-  "related_applications": [
-    {
-        "platform": "play",
-        "url": "https://play.google.com/store/apps/details?id=com.google.android.apps.fitness",
-        "id": "com.google.android.apps.fitness"
-    }
-  ]
+  "background_color": "#ffffff"
 }
