fix: splash 화면 배경색 변경 (#14)

--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -26,5 +26,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#FFCB23",
-  "background_color": "#FFCB23"
+  "background_color": "#FAFAFA"
 }
