feat: pwa 세팅 변경, 로그인 화면 구현 중 (#17)

--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -23,7 +23,8 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/login",
+  "scope": ".",
   "display": "standalone",
   "theme_color": "#FFCB23",
   "background_color": "#FAFAFA"
