--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -23,8 +23,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/login",
-  "scope": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#FFCB23",
   "background_color": "#FAFAFA"
