--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,9 @@
   "dependencies": {
     "@nivo/bar": "^0.85.1",
     "@nivo/core": "^0.85.1",
-    "axios": "^1.6.8",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "sort-by": "^1.2.0"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
