--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
+
 
     // ⭐ SWAGGER 적용
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
