feat: login redirect 구현 중

--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -24,6 +24,7 @@
     }
   ],
   "start_url": "/",
+  "scope": ".",
   "display": "standalone",
   "theme_color": "#FFCB23",
   "background_color": "#FAFAFA"
