로그인 연결 중

--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -25,6 +25,7 @@
   ],
   "start_url": "/",
   "scope": ".",
+  "orientation": "portrait",
   "display": "standalone",
   "theme_color": "#FFCB23",
   "background_color": "#FAFAFA"
