--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "vite-plugin-svgr": "^4.2.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -28,6 +27,7 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
