fix: Token Validation 및 AuthenticationEntryPoint token 유효성 검사 안되던 오류 수정

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     //⭐ Redis 설정
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.redisson:redisson:3.16.4'
 
     //⭐ DB 설정
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
