--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -57,6 +57,11 @@ dependencies {
     // ⭐ SWAGGER 적용
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
+    // ⭐Web Socket 용
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'org.webjars:sockjs-client:1.5.1'
+
 }
 
 tasks.named('test') {
