--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -28,6 +28,9 @@ spring:
   batch:
     job:
       enabled: false # 키자마자 자동 실행 방지
+#      name: ${job.name:NONE}
+    jdbc:
+      initialize-schema: always
 
 
 
@@ -87,6 +90,11 @@ springdoc:
   model-and-view-allowed: true
   paths-to-match:
     - /api/**
+#logging:
+#  level:
+##    org.springframework.batch: debug
+##    org.springframework.jdbc.datasource: debug
+#    root: trace
 
 pay:
   secret-key: ${PAY_SECRET_KEY}
