--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,16 @@
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "typeit-react": "^2.7.1",
+    "sockjs-client": "^1.6.1",
+    "@stomp/stompjs": "^7.0.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "stompjs": "^2.3.3",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
