FIX: 양방향 순환 참조 해결 -> @JSONIGNORE

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -24,7 +24,9 @@ spring:
       host: ${REDIS_HOST}
       port: 6379
       password: ${REDIS_PASSWORD}
-
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
 
 
 
