--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -13,6 +13,7 @@ java {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -61,6 +62,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'org.webjars:sockjs-client:1.5.1'
 
+    implementation 'org.json:json:20240303'
 }
 
 tasks.named('test') {
