--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nivo/bar": "^0.85.1",
     "@nivo/core": "^0.85.1",
+    "@nivo/pie": "^0.85.1",
+    "@nivo/radial-bar": "^0.85.1",
     "@stomp/stompjs": "^7.0.0",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.6.8",
