--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
     implementation 'org.springframework.boot:spring-boot-starter-batch'
+    implementation 'org.springframework.retry:spring-retry'
 
     // ⭐ SWAGGER 적용
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
