feat: 에그,머니 거래 내역 블록체인에 저장하는 기능 구현

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -74,6 +74,9 @@ dependencies {
 
     // ⭐ org.json
     implementation 'org.json:json:20240303'
+
+    // ⭐ web3j_blockchain
+    implementation 'org.web3j:core:5.0.0'
 }
 
 tasks.named('test') {
